# python-app-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
