[tool.poetry]
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Typing :: Typed",
]
description = "{{cookiecutter.description}}"
homepage = ""
keywords = [
  "",
]
license = "{{cookiecutter.license}}"
name = "{{cookiecutter.project_slug}}"
readme = "README.md"
repository = ""
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.3"
isort = "^5.6.4"
mypy = "^0.780"
pdbpp = "^0.10.2"
pylint = "^2.5.3"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-watch = "^4.2.0"

[tool.poetry.scripts]
ddot = '{{cookiecutter.project_root}}.__main__:main'

[tool.poetry.urls]
"Bug Reports" = ""
"Say Thanks!" = ""

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
